--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">rabi</string>
+    <string name="title_activity_poem">PoemActivity</string>
+    <string name="title_activity_books">BooksActivity</string>
 </resources>
