--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">rabi</string>
     <string name="title_activity_poem">PoemActivity</string>
     <string name="title_activity_books">BooksActivity</string>
+    <string name="title_activity_poets">PoetsActivity</string>
 </resources>
